--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^1.3.7"
   },
   "scripts": {
-    "test": "mocha test/index",
+    "test": "mocha --watch test/index",
     "dev": "DEBUG=stash-magick nodemon -q index"
   },
   "repository": {
