--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": false,
   "dependencies": {
     "debug": "^2.2.0",
-    "restify": "*",
+    "deep-extend": "^0.4.0",
+    "imagemagick-stream": "^2.0.0",
     "pkgcloud": "*",
-    "request": "^2.49.0"
+    "request": "^2.49.0",
+    "restify": "*"
   },
   "contributors": [
     {
@@ -20,8 +22,10 @@
     "nodemon": "^1.3.7"
   },
   "scripts": {
-    "test": "mocha --watch test/index",
-    "dev": "DEBUG=stash-magick nodemon -q index"
+    "test": "mocha -r index test/index",
+    "test-watch": "DEBUG=stash-magick mocha --watch -r index test/index",
+    "service": "DEBUG=stash-magick nodemon -q lib/service",
+    "service-test": "DEBUG=stash-magick nodemon -q lib/service -d 0 --exec mocha test/index"
   },
   "repository": {
     "type": "git",
