--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "debug": "^2.2.0",
     "deep-extend": "^0.4.0",
     "imagemagick-stream": "^2.0.0",
+    "multiparty": "^4.1.2",
     "pkgcloud": "*",
     "request": "^2.49.0",
     "restify": "*"
